# OpenInBox

./: .gitattributes  .gitignore  BLOG.md  Dockerfile  HACKATHON_GUIDE.md  PITCH.md  README.md  ablation_matrix.json  ablation_results.json  ablation_study.py  ablation_study_v2.py  advanced_analysis.json  advanced_analysis.py  app.py  baseline_verification_report.txt  build_notebook.py  cascade_demo_out.txt  cascade_out.txt  check_live.py  check_repo.py  check_reset_live.py  check_server.py  colab_training_guide.md  debug_hard.py  deploy_to_hf.py  final_tests.txt  generate_cascade_demo.py  generate_sample_episode.py  hackathon_readiness_audit.md  inference.py  live_test.py  openenv.yaml  pyproject.toml  requirements.txt  rl_episode_trace.json  sample_episode.json  scratch_audit.py  scratch_verify.py  smoke_test.py  smoke_test_full.py  (+4 more)
.pytest_cache/v/cache/: lastfailed  nodeids
api/: app.py  main.py
baseline/: __init__.py  naive_agent.py  openai_agent.py  rule_agent.py  run_baseline.py
baseline/results/: scores_fallback_seed0.json  scores_naive_seed0.json
colab_training/: cells_1_to_4.py  cells_5_to_9.py
environment/: __init__.py  env.py  injection.py  models.py  reward.py
environment/data/: merge_threads.py  tasks.json  threads.json  threads_easy_medium.json  threads_hard.json  validate.py
environment/graders/: __init__.py  base.py  task1.py  task2.py  task3.py
server/: __init__.py  app.py
tests/: phase2_hardness_verification.py  test_env.py  test_graders.py  test_reward.py
