[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "openinbox"
version = "1.0.0"
description = "Stateful enterprise email agent environment for the OpenEnv spec"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "openenv>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
openinbox-server = "api.main:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/susannnnn/OpenInBox"
Repository = "https://github.com/susanchandra/OpenInBox"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "environment*", "baseline*", "server*"]
