[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openinbox"
version = "1.0.0"
description = "Stateful enterprise email agent environment for the OpenEnv spec"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "openenv>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
server = "server.app:main"
openinbox-server = "server.app:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/susannnnn/OpenInBox"
Repository = "https://github.com/susanchandra/OpenInBox"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "environment*", "baseline*", "server*"]

[tool.uv]
# openenv 0.2.0 is not yet on PyPI; override allows the lock to resolve
# using the latest available release while the metadata declares >=0.2.0.
override-dependencies = ["openenv>=0.1.0"]
